--- a/src/components/Tabs/Code/Code.scss
+++ b/src/components/Tabs/Code/Code.scss
@@ -14,6 +14,10 @@
     @include sm {
       width: 100%;
       padding: 20px 28px;
+
+      .card-info {
+        padding: 0;
+      }
     }
   }
 }
