--- a/src/components/Tabs/Code/Code.scss
+++ b/src/components/Tabs/Code/Code.scss
@@ -3,13 +3,13 @@
 .code {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 10px;
+  margin: 10px -10px -10px;
 
   .card {
-    width: 45%;
     padding: 40px 48px;
+    flex: 1 0 45%;
     box-sizing: border-box;
-    margin: 5px;
+    margin: 10px;
 
     @include sm {
       width: 100%;
