Add close button to the Modal

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -37,6 +37,23 @@
   will-change: opacity;
 }
 
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  right: 15px;
+  top: 10px;
+}
+
+.close:hover,
+.close:focus {
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 @keyframes fadeInUp {
   from {
     opacity: 0;
