--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -46,15 +46,8 @@
   display: flex;
   color: $gray-light;
   justify-content: space-between;
-
-  a {
-    text-decoration: none;
-    padding-top: 40px;
-  }
-
-  @include sm {
-    flex-wrap: wrap;
-  }
+  padding-top: 20px;
+  font-size: 17px;
 }
 
 .horse {
