--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -40,6 +40,10 @@
   @include md {
     font-size: 40px;
   }
+
+  @include lg {
+    font-size: 54px;
+  }
 }
 
 .banner-bottom {
@@ -48,6 +52,7 @@
   justify-content: space-between;
   padding-top: 20px;
   font-size: 17px;
+  line-height: 24px;
 }
 
 .horse {
