--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -11,6 +11,10 @@
     padding: 0 40px;
   }
 
+  .card-screen-img {
+    border-radius: 4px;
+  }
+
   .card-info {
     display: flex;
     flex-direction: column;
@@ -26,6 +30,7 @@
 
   .card-description {
     font-size: 14px;
+    line-height: 20px;
     color: $gray-light;
   }
 
