--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -6,7 +6,14 @@
   font-size: 34px;
   line-height: 41px;
   text-align: center;
-  color: $light
+  color: $light;
+  position: relative;
+}
+
+.team-close {
+  position: absolute;
+  right: 0;
+  top: 35px;
 }
 
 .team-info {
