Design pages and header/footer edges

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -7,7 +7,7 @@
   height: 100vh;
 }
 
-.Slogan {
+.Banner-title {
   font-size: 64px;
   line-height: 70px;
 
@@ -19,7 +19,7 @@
   }
 }
 
-.Mission {
+.Banner-desc {
   position: absolute;
   bottom: 80px;
   color: $remus;
