--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 
 body {
   font-family: $font-family-base;
+  font-size: 62.6%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
