Remove unnecessary components

--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -1,86 +1,5 @@
 @import "../../scss/utils";
 
-.team-header {
-  padding-top: 80px;
-  font-weight: 800;
-  font-size: 34px;
-  line-height: 41px;
-  text-align: center;
-  color: $light;
-  position: relative;
-}
-
-.team-close {
-  position: absolute;
-  right: 0;
-  top: 35px;
-}
-
-.team-info {
-  font-size: 14px;
-  line-height: 17px;
-  text-align: center;
-  color: $gray-light;
-  padding-top: 21px;
-  padding-bottom: 65px;
-}
-
-.team-members {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  list-style: none;
-  margin: 0;
-  font-size: 14px;
-  text-align: center;
-  color: #808085;
-
-  @include sm {
-    padding: 0 5%;
-  }
-
-  @include md {
-    padding: 0 8%;
-  }
-
-  @include lg {
-    padding: 0 15%;
-  }
-
-  a {
-    color: #808085;
-    font-size: 14px;
-    text-decoration: none;
-  }
-
-  .team-member {
-    margin: 20px;
-    width: 100px;
-    height: 100px;
-    box-sizing: border-box;
-
-    img {
-      width: 100%;
-      padding-bottom: 5px;
-    }
-  }
-
-  .team-member.selected {
-    border: 5px solid $remus;
-  }
-}
-
-.grid-gallery {
-  margin-top: 100px;
-}
-
-.github-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-bottom: 50px;
-
-  a {
-    text-decoration: none;
-  }
+.Team {
+  background: #F5F5F5;
 }
