--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,8 +1,5 @@
 @import "../../scss/utils";
 
-.Banner-header {
-}
-
 .Header {
   position: absolute;
   height: 110px;
@@ -64,5 +61,51 @@
 
   @include sm {
     display: none;
+  }
+}
+
+.Menu-wrap {
+  z-index: 2;
+  display: none;
+
+  @include sm {
+    display: block;
+  }
+}
+
+.Menu-close {
+  display: none;
+}
+
+.navbar-dropdown {
+  display: none;
+  position: absolute;
+  background: #13151A;
+  width: 100%;
+  height: 100vh;
+  padding-top: 100px;
+  top: 0;
+  z-index: 1;
+
+  .nav {
+    display: block;
+    text-align: center;
+  }
+
+  .nav-item {
+    padding: 20px 0;
+    display: block;
+  }
+
+  .nav-item-btn {
+    box-sizing: unset;
+    padding: 20px 0;
+    margin: 0;
+    border: none;
+  }
+
+  .nav-item-btn, .nav-item a {
+    font-size: 22px;
+    line-height: 29px;
   }
 }
