--- a/src/components/Edge/Edge.scss
+++ b/src/components/Edge/Edge.scss
@@ -155,3 +155,16 @@
     line-height: 29px;
   }
 }
+
+.Edge-icon-text {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  line-height: 21px;
+  color: #ffffff;
+  text-decoration: none;
+
+  svg {
+    padding-right: 24px
+  }
+}
