--- a/src/components/Join/Join.scss
+++ b/src/components/Join/Join.scss
@@ -16,7 +16,7 @@
 }
 
 .Join-form {
-  
+
 }
 
 .Join-success {
@@ -37,6 +37,10 @@
   display: flex;
   justify-content: space-between;
   padding-top: 40px;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 .Join-link {
