--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -36,8 +36,9 @@
 .Page-down {
   cursor: pointer;
   position: absolute;
+  right: 70px;
   bottom: 70px;
-  right: 0;
+  z-index: 2;
 
   @include sm {
     display: none;
