--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,11 +1,10 @@
 @import "../../scss/utils.scss";
 
-.Home-half {
+.Screen-half {
   position: absolute;
   width: 50%;
   height: 100%;
   right: 0;
-  z-index: 1;
   background: url("/images/home/bg.svg") repeat;
 
   @include sm {
