--- a/src/components/Scroller/Scroller.scss
+++ b/src/components/Scroller/Scroller.scss
@@ -6,20 +6,16 @@
   align-items: center;
 }
 
-.Scroller-inner {
-  width: 100%;
-  z-index: 1;
-
-  @include sm {
-    padding-top: 20%;
-  }
-}
-
 .Scroller-wrap {
-  height: 340px;
+  z-index: 1;
+  height: 352px;
   width: 100%;
   overflow: hidden;
   position: relative;
+
+  @include sm {
+    top: 13%;
+  }
 }
 
 .Scroller {
@@ -30,12 +26,7 @@
   height: 100%;
   width: 100%;
   scroll-behavior: smooth;
-  bottom: -13px;
-
-  //@include sm {
-  //  padding-top: 150px;
-  //  height: 256px;
-  //}
+  top: 30px;
 
   &::after {
     content: '';
@@ -45,7 +36,10 @@
 
 .Scroller-pagination {
   z-index: 2;
-  padding-top: 20px;
+
+  @include sm {
+    padding-top: 5px;
+  }
 }
 
 .Pagination-item {
