Add page navigation to mobile version too

--- a/src/components/Edge/Edge.scss
+++ b/src/components/Edge/Edge.scss
@@ -139,7 +139,9 @@
   cursor: pointer;
 
   @include sm {
-    display: none;
+    position: absolute;
+    right: 24px;
+    bottom: 24px;
   }
 }
 
