--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,13 +1,31 @@
 @import "../../scss/utils.scss";
 
-.Screen-half {
+.Screen-left-half, .Screen-right-half {
   position: absolute;
   width: 50%;
   height: 100%;
-  right: 0;
-  background: url("/images/home/bg.svg") repeat;
 
   @include sm {
     width: 100%;
   }
+}
+
+.Screen-right-half {
+  right: 0;
+}
+
+.Screen-left-half {
+  left: 0;
+}
+
+.paths-white {
+  background: url(/images/home/paths-white.svg) repeat;
+}
+
+.paths-grey {
+  background: url(/images/home/paths-grey.svg) repeat;
+}
+
+.paths-green {
+  background: url(/images/home/paths-green.svg) repeat;
 }
