--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -1,11 +1,20 @@
 @import "../../scss/utils";
 
 .Team {
-  background: #F5F5F5;
+  .Edge {
+    z-index: 1;
+  }
 }
 
 .Team-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.Team-gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, #FFFFFF 1.81%, transparent 88.04%);
 }
