--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -10,14 +10,32 @@ $font-family-base: 'IBM Plex Sans', sans-serif;
  * ======================================================================== */
 
 $white:       #ffffff !default;
+$white-50:    rgba(255, 255, 255, 0.5) !default;
 $light:       #F5F5F5 !default;
 $black:       #000000 !default;
 $dark:        #13151A !default;
+$dark-steal:  #252933 !default;
 $blue:        #0d6efd !default;
 $grey:        #808085 !default;
 $gray-light:  #C8C7CC !default;
 $remus:       #05C46B !default;
+$green:       #05C46B !default;
 $yellow:      #FFA800 !default;
+
+:export {
+  white:      $white;
+  white-50:   $white-50;
+  light:      $light;
+  black:      $black;
+  dark:       $dark;
+  dark-steal: $dark-steal;
+  blue:       $blue;
+  grey:       $grey;
+  gray-light: $gray-light;
+  remus:      $remus;
+  green:      $green;
+  yellow:     $yellow;
+}
 
 /*
  * Layout
