Remove the 'remus' color name in favor of `green`

--- a/src/components/Mission/Mission.scss
+++ b/src/components/Mission/Mission.scss
@@ -17,7 +17,7 @@
   font-weight: 600;
   font-size: 64px;
   line-height: 70px;
-  color: $remus;
+  color: $green;
 
   @include sm {
     margin-top: 60px;
