--- a/src/components/Join/JoinForm.scss
+++ b/src/components/Join/JoinForm.scss
@@ -60,12 +60,12 @@ input, .btn {
 
 .btn {
   cursor: pointer;
-  background: $remus;
+  background: $green;
   font-size: 24px;
   color: $white;
 
   &:hover {
-    background: lighten($remus, 2%);
+    background: lighten($green, 2%);
   }
 
   &.loading {
