Change Card shadow

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -29,3 +29,7 @@
 .paths-green {
   background: url(/images/home/paths-green.svg) repeat;
 }
+
+.paths-dark {
+  background: url(/images/home/paths-dark.svg) repeat;
+}
