--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,14 +2,15 @@
 
 .Card {
   background: #252933;
-  box-shadow: 4px 0 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 24px;
-  height: 320px;
+  height: 310px;
   margin-right: 24px;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: hidden;
 
   @include sm {
     min-width: 250px;
