--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -1,6 +1,11 @@
 @import "../../scss/utils";
 
 .Team {
+  .Edge-header,
+  .Edge-bottom {
+    position: absolute;
+  }
+
   .Edge {
     z-index: 1;
   }
