--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,10 +2,9 @@
 
 .Card {
   background: #252933;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 24px;
   height: 310px;
-  margin-right: 24px;
+  margin: 0 12px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -13,21 +12,29 @@
   overflow: hidden;
 
   @include sm {
-    min-width: 250px;
+    // min-width: 250px;
     border-radius: 12px;
   }
 
   @include md {
-    min-width: 536px;
+    // min-width: 536px;
   }
 
   @include lg {
-    min-width: 536px;
+    // min-width: 536px;
   }
 
   @include xxl {
-    min-width: 650px;
+    // min-width: 650px;
   }
+}
+
+.Card-start {
+  margin-left: 0;
+}
+
+.Card-end {
+  margin-right: 0;
 }
 
 .Card-dark {
@@ -76,10 +83,6 @@
 }
 
 .Card-bottom {
-  background: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(12px);
-  border-bottom-left-radius: 24px;
-  border-bottom-right-radius: 24px;
   padding: 28px 32px;
   display: flex;
   justify-content: space-between;
@@ -118,17 +121,7 @@
   }
 }
 
-.action-separator {
-
-}
-
 .guides-gallery .fancybox-thumbs__list a {
   height: 145px;
 }
 
-.Card-coming-soon {
-  .Card-bottom {
-    background: transparent;
-    backdrop-filter: none;
-  }
-}
