--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -5,7 +5,6 @@
   margin-right: auto;
   margin-left: auto;
   word-wrap: break-word;
-  overflow: hidden;
   box-sizing: border-box;
   position: relative;
 
@@ -31,8 +30,12 @@
 }
 
 .Container-fluid {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   position: relative;
+}
+
+.Container-clipped {
+  overflow: hidden;
 }
