--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,32 +1,11 @@
 @import "../../scss/utils";
 
 .Card {
-  background: #252933;
-  border-radius: 24px;
-  width: 100%;
-  margin: 0 12px;
-  position: relative;
+  padding: 32px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   overflow: hidden;
-
-  @include sm {
-    // min-width: 250px;
-    border-radius: 12px;
-  }
-
-  @include md {
-    // min-width: 536px;
-  }
-
-  @include lg {
-    // min-width: 536px;
-  }
-
-  @include xxl {
-    // min-width: 650px;
-  }
 }
 
 .Card-start {
@@ -37,91 +16,43 @@
   margin-right: 0;
 }
 
-.Card-dark {
-  background: #13151A;
-}
-
 .Card-title {
-  padding: 32px;
+  padding-bottom: 40px;
   font-style: normal;
   font-weight: normal;
   font-size: 32px;
   line-height: 42px;
   color: #FFFFFF;
   z-index: 1;
-  width: 50%;
+}
 
-  img {
-    max-width: 80%;
-  }
-
-  @include sm {
-    padding-top: 24px;
-    padding-left: 24px;
-    font-size: 20px;
-    line-height: 26px;
-    width: 80%;
-  }
+.Card-title--big {
+  font-size: 36px;
+  line-height: 47px;
+  font-weight: 600;
 }
 
 .Card-info {
-  padding: 0 32px;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 23px;
+  z-index: 1;
+
+  @include sm {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+
+.Card-info--grey {
   color: $grey;
-  z-index: 1;
-
-  @include sm {
-    width: 80%;
-    font-size: 14px;
-    line-height: 18px;
-    padding-left: 24px;
-    margin-bottom: 50px;
-  }
 }
 
-.Card-bottom {
-  padding: 32px;
-  display: flex;
-  justify-content: space-between;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 23px;
-  color: #05C46B;
-  z-index: 1;
-
-  span, a {
-    cursor: pointer;
-    color: #05C46B;
-    text-decoration: none;
-  }
-
-  @include sm {
-    padding: 27px 24px;
-    font-size: 14px;
-    line-height: 18px;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
-  }
+.Card-info--white {
+  color: $white;
 }
 
-.Card-cover {
-  max-width: 50%;
-  position: absolute;
-  right: 20px;
-  top: 23px;
-
-  @include sm {
-    width: 110px;
-    top: unset;
-    bottom: 0;
-    left: 30%;
-  }
+.Card-info--dark {
+  color: $dark;
 }
-
-.guides-gallery .fancybox-thumbs__list a {
-  height: 145px;
-}
-
