--- a/src/components/Guides/Guides.scss
+++ b/src/components/Guides/Guides.scss
@@ -3,3 +3,42 @@
 .Guides {
   background: #04AD5F;
 }
+
+.Guides-filter {
+  padding-top: 50px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 29px;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+}
+
+.Guides-list {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  margin-left: 12px;
+  padding: 0;
+
+  li {
+    padding: 10px 24px;
+    margin: 0 12px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    cursor: pointer;
+
+    box-sizing: border-box;
+    border-radius: 8px;
+    border: 1px solid #FFFFFF;
+  }
+
+  li.active {
+    background: $dark;
+    border-radius: 8px;
+    border: 1px solid $dark;
+  }
+}
