--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -80,7 +80,7 @@
 .navbar-dropdown {
   display: none;
   position: absolute;
-  background: #13151A;
+  background: $dark;
   width: 100%;
   height: 100vh;
   padding-top: 100px;
