--- a/src/components/Contact/ContactForm.scss
+++ b/src/components/Contact/ContactForm.scss
@@ -1,7 +1,15 @@
 @import "../../scss/utils";
 
-.Join-form {
+.Contact-form {
+}
 
+.Contact-form-group {
+  display: flex;
+  justify-content: space-between;
+
+  @include sm {
+    display: block;
+  }
 }
 
 .ml-subscribe-form {
@@ -9,9 +17,8 @@
   justify-content: center;
 }
 
-.Join-success {
+.Contact-success {
   display: none;
-  color: white;
   text-align: center;
 
   h4 {
@@ -23,45 +30,29 @@
   }
 }
 
-.Join-links {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 40px;
-
-  a {
-    text-decoration: none;
-  }
-}
-
-.Join-link {
-  display: flex;
-  font-size: 16px;
-  line-height: 21px;
-  text-align: center;
-
-  color: $white;
-
-  svg {
-    padding-right: 12px;
-  }
-}
-
-input, .btn {
+input, textarea, .btn {
   box-sizing: border-box;
-  width: 100%;
-  padding: 15px 24px;
   border: none;
-  border-radius: 4px;
-  margin: 16px 0;
+  border-radius: 8px;
+  margin: 16px 10px;
   display: inline-block;
-  font-size: 17px;
-  line-height: 20px;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+input, textarea {
+  border: 1px solid $gray-light;
+  padding: 15px 24px;
+  width: 100%;
 }
 
 .btn {
   cursor: pointer;
+  padding: 10px 24px;
   background: $green;
-  font-size: 24px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
   color: $white;
 
   &:hover {
@@ -73,31 +64,49 @@ input, .btn {
     opacity: 0.6;
     cursor: not-allowed;
   }
+
+  @include sm {
+    width: 100%;
+  }
 }
 
-.Join-checkbox-wrap {
+.Contact-checkbox-wrap {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 
-  .Join-checkbox {
+  .Contact-checkbox {
     width: 20px;
   }
 
-  .Join-checkbox-description {
+  .Contact-checkbox-description {
     padding-left: 5px;
     font-size: 14px;
-    line-height: 20px;
-    color: $white;
+    line-height: 18px;
+    color: $grey;
+  }
+
+  .Contact-action {
+    margin-left: 20px;
+
+    @include sm {
+      margin: 0;
+    }
   }
 
   a {
-    color: $white;
+    color: $grey;
+  }
+
+  @include sm {
+    align-items: unset;
+    flex-direction: column;
   }
 }
 
 // Join form modal
 
-.Join-modal {
+.Contact-modal {
   width: 70%;
   margin: auto;
   display: flex;
@@ -127,7 +136,7 @@ input, .btn {
   @include md {
     width: 90%;
 
-    .Join-form {
+    .Contact-form {
       width: 70%;
     }
   }
