--- a/src/components/Mission/Mission.scss
+++ b/src/components/Mission/Mission.scss
@@ -1,7 +1,11 @@
 @import "../../scss/utils";
 
 .Mission {
+  height: 100vh;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .Mission-bg {
