Design Banner for wallet and academy pages

--- a/src/components/Contact/ContactForm.scss
+++ b/src/components/Contact/ContactForm.scss
@@ -65,6 +65,15 @@ input, textarea {
   }
 }
 
+.btn-dark {
+  background: $black;
+  color: white;
+
+  &:hover {
+    background: lighten($dark-steal, 2%);
+  }
+}
+
 .Contact-checkbox-wrap {
   display: flex;
   justify-content: space-between;
