--- a/src/components/Header/Slogan.scss
+++ b/src/components/Header/Slogan.scss
@@ -19,20 +19,6 @@
   }
 }
 
-.Slogan-desc {
-  position: absolute;
-  bottom: 80px;
-  width: 73vw;
-  color: $green;
-  font-size: 22px;
-
-  @include sm {
-    font-size: 24px;
-    line-height: 31px;
-    bottom: 60px;
-  }
-}
-
 .Page-down {
   cursor: pointer;
   position: absolute;
@@ -41,6 +27,6 @@
   z-index: 2;
 
   @include sm {
-    bottom: 24px;
+    display: none;
   }
 }
