--- a/src/components/Edge/Edge.scss
+++ b/src/components/Edge/Edge.scss
@@ -174,6 +174,10 @@
 
   svg {
     width: 62px;
+
+    @include sm {
+      width: 40px;
+    }
   }
 }
 
@@ -183,8 +187,7 @@
   font-size: 24px;
 
   @include sm {
-    font-size: 22px;
-    line-height: 29px;
+    font-size: 18px;
   }
 }
 
