--- a/src/components/Edge/Edge.scss
+++ b/src/components/Edge/Edge.scss
@@ -194,12 +194,14 @@
 .Edge-icon-text {
   display: flex;
   justify-content: center;
-  font-size: 16px;
-  line-height: 21px;
-  color: #ffffff;
+  font-size: 32px;
+  color: #C4C4C4;
   text-decoration: none;
+}
 
-  svg {
-    padding-right: 24px
-  }
+.Edge-icon-link {
+  cursor: pointer;
+  color: #05C46B;
+  text-decoration: none;
+  font-weight: 600;
 }
